# hamr

./: .gitignore  RELEASING.md  TODO.md  biome.json  package-lock.json  package.json
rust/: .gitignore  Cargo.toml  RUST_REWRITE_SPEC.md
rust/hamr-agent/: Cargo.toml
rust/hamr-agent/src/: config.rs  lib.rs  migrations.rs  package_manager_cli.rs
rust/hamr-agent/src/cli/: args.rs  config_selector.rs  file_processor.rs  initial_message.rs  list_models.rs  main.rs  mod.rs  project_trust.rs  session_picker.rs  startup_ui.rs
rust/hamr-agent/src/core/: agent_session.rs  agent_session_runtime.rs  agent_session_services.rs  auth_guidance.rs  auth_storage.rs  bash_executor.rs  defaults.rs  diagnostics.rs  event_bus.rs  exec.rs  experimental.rs  footer_data_provider.rs  http_dispatcher.rs  keybindings.rs  messages.rs  mod.rs  model_registry.rs  model_resolver.rs  output_guard.rs  package_manager.rs  project_trust.rs  prompt_templates.rs  provider_attribution.rs  provider_display_names.rs  resolve_config_value.rs  resource_loader.rs  sdk.rs  session_cwd.rs  session_manager.rs  settings_manager.rs  skills.rs  slash_commands.rs  source_info.rs  system_prompt.rs  telemetry.rs  timings.rs  trust_manager.rs
rust/hamr-agent/src/core/compaction/: branch_summarization.rs  compaction.rs  index.rs  mod.rs  utils.rs
rust/hamr-agent/src/core/export_html/: ansi_to_html.rs  export.rs  mod.rs  tool_renderer.rs
rust/hamr-agent/src/core/extensions/: api_impl.rs  loader.rs  mod.rs  runner.rs  types.rs  wrapper.rs
rust/hamr-agent/src/core/tools/: bash.rs  edit.rs  edit_diff.rs  file_mutation_queue.rs  find.rs  grep.rs  ls.rs  mod.rs  output_accumulator.rs  path_guard.rs  path_utils.rs  read.rs  render_utils.rs  tool_definition_wrapper.rs  truncate.rs  write.rs
rust/hamr-agent/src/hamr/: helpers.rs  mod.rs  persistent_editor.rs  repair.rs  shimmer.rs  startup_config.rs
rust/hamr-agent/src/hamr/extensions/: cards.rs  context.rs  memory.rs  mod.rs  persistent_editor.rs  providers.rs  read_loop_guard.rs  subagents.rs
rust/hamr-agent/src/hamr/handoff/: handoff_manager.rs  mod.rs
rust/hamr-agent/src/hamr/memory/: fact_store.rs  fts_marks.rs  holographic_memory.rs  mod.rs
rust/hamr-agent/src/hamr/providers/: mod.rs  relay_provider.rs  tool_calls.rs  types.rs
rust/hamr-agent/src/hamr/store/: mod.rs  sqlite_loader.rs
rust/hamr-agent/src/modes/: mod.rs  print_mode.rs
rust/hamr-agent/src/modes/interactive/: env_expand.rs  interactive_mode.rs  interrupt_routing.rs  mod.rs
rust/hamr-agent/src/modes/rpc/: jsonl.rs  mod.rs  rpc_client.rs  rpc_mode.rs  rpc_types.rs
rust/hamr-agent/src/utils/: ansi.rs  changelog.rs  child_process.rs  clipboard.rs  clipboard_image.rs  clipboard_native.rs  deprecation.rs  exif_orientation.rs  frontmatter.rs  fs_watch.rs  git.rs  hamr_user_agent.rs  html.rs  image_convert.rs  image_resize.rs  image_resize_core.rs  json.rs  mime.rs  mod.rs  open_browser.rs  paths.rs  photon.rs  shell.rs  sleep.rs  syntax_highlight.rs  tools_manager.rs  version_check.rs
rust/hamr-agent/tests/: event_bus_test.rs  integration_placeholders.rs  messages_test.rs  path_utils_test.rs  tools_test.rs  truncate_test.rs
rust/hamr-ai/: Cargo.toml
rust/hamr-ai/src/: api_registry.rs  env_api_keys.rs  images.rs  index.rs  lib.rs  models.rs  models_generated.rs  oauth.rs  session_resources.rs  stream.rs  types.rs
rust/hamr-ai/src/providers/: amazon_bedrock.rs  anthropic.rs  azure_openai_responses.rs  cloudflare.rs  faux.rs  github_copilot_headers.rs  google.rs  google_shared.rs  google_vertex.rs  mistral.rs  mod.rs  openai_codex_responses.rs  openai_completions.rs  openai_prompt_cache.rs  openai_responses.rs  openai_responses_shared.rs  register_builtins.rs  simple_options.rs  transform_messages.rs
rust/hamr-ai/src/providers/images/: mod.rs  openrouter.rs  register_builtins.rs
rust/hamr-ai/src/providers/model_data/: amazon_bedrock_models.rs  ant_ling_models.rs  anthropic_models.rs  azure_openai_responses_models.rs  cerebras_models.rs  cloudflare_ai_gateway_models.rs  cloudflare_workers_ai_models.rs  deepseek_models.rs  fireworks_models.rs  github_copilot_models.rs  google_models.rs  google_vertex_models.rs  groq_models.rs  huggingface_models.rs  kimi_coding_models.rs  minimax_cn_models.rs  mod.rs  (+19 more)
rust/hamr-ai/src/utils/: abort_signals.rs  diagnostics.rs  event_stream.rs  hash.rs  headers.rs  json_parse.rs  mod.rs  overflow.rs  provider_env.rs  sanitize_unicode.rs  validation.rs
rust/hamr-harness/: Cargo.toml
rust/hamr-harness/src/: agent.rs  agent_loop.rs  index.rs  lib.rs  types.rs
rust/hamr-harness/src/harness/: agent_harness.rs  messages.rs  mod.rs  prompt_templates.rs  skills.rs  system_prompt.rs  types.rs
rust/hamr-support/: Cargo.toml
rust/hamr-support/src/: build_release.rs  lib.rs  package_json.rs  verify_pack.rs
rust/scripts/: generate_models.py
rust/sexy-tui-rs/: Cargo.toml
rust/sexy-tui-rs/src/: autocomplete.rs  fuzzy.rs  keybindings.rs  keys.rs  kill_ring.rs  lib.rs  native_modifiers.rs  stdin_buffer.rs  terminal.rs  terminal_colors.rs  terminal_image.rs  tui.rs  utils.rs  virtual_terminal.rs  word_navigation.rs
rust/sexy-tui-rs/src/theme/: capability.rs  config.rs  mod.rs  tokens.rs
rust/sexy-tui-rs/src/widgets/: card.rs  editor.rs  image.rs  input.rs  loader.rs  markdown.rs  mod.rs  panel.rs  select_list.rs  settings_list.rs  text.rs
rust/sexy-tui-rs/tests/: autocomplete_test.rs  bug_regression_imageline_test.rs  editor_test.rs  fuzzy_test.rs  input_test.rs  keybindings_test.rs  keys_test.rs  markdown_test.rs  overlay_non_capturing_test.rs  overlay_options_test.rs  overlay_short_content_test.rs  regression_overlay_cjk_boundary_test.rs  regression_regional_indicator_width_test.rs  select_list_test.rs  settings_list_test.rs  source_parity_core.rs  stdin_buffer_test.rs  tab_width_test.rs  terminal_colors_test.rs  terminal_image_test.rs  terminal_test.rs  truncate_to_width_test.rs  truncated_text_test.rs  tui_cell_size_input_test.rs  tui_overlay_style_leak_test.rs  tui_render_test.rs  tui_shrink_test.rs  word_navigation_test.rs  wrap_ansi_test.rs
(+295 files in other folders)
