[workspace]
# hamr Rust rewrite — 4 crates mirroring 4 TypeScript packages.
# See RUST_REWRITE_SPEC.md for full architecture and porting conventions.
# Build order: hamr-ai → hamr-harness → hamr-agent
resolver = "2"
members = [
    "hamr-ai",
    "hamr-harness",
    "hamr-agent",
    "hamr-support",
    "sexy-tui-rs",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/skaft-software/hamr"
authors = ["Skaft"]
rust-version = "1.85"

[workspace.dependencies]
# --- Core ---
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
vt100 = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7"] }
bytes = "1"
pin-project-lite = "0.2"

# --- AI / HTTP ---
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
# aws-sdk-bedrockruntime = "1"      # uncomment when bedrock provider is written
# aws-types = "1"
# aws-config = "1"

# --- Providers ---
# Each provider feature gates the relevant SDK/client crate.
# By default, only a minimal set is compiled.
# Provider SDKs will be added when their implementation modules are written.
# async-openai = "0.27"             # openai completions — uncomment when needed

# --- Parsing / Schema ---
schemars = { version = "0.8", features = ["derive", "chrono"] }  # JSON Schema → TypeBox equivalent
jsonschema = "0.26"                  # JSON Schema validation (TypeBox Value.Check equivalent)
json5 = "0.4"                       # relaxed JSON parsing
serde_yaml = "0.9"

# --- Storage ---
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }  # FTS5
tempfile = "3"

# --- Encoding ---
base64 = "0.22"                      # base64 encode/decode

# --- Image Processing ---
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# --- Archive Extraction ---
tar = "0.4"
flate2 = { version = "1", features = ["rust_backend"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

# --- Syntax Highlighting ---
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

# --- Version / URL ---
semver = "1"
url = "2"
urlencoding = "2"

# --- Text / Diff ---
similar = "2"                       # diff engine (replaces diff.js)
regex = "1"
glob = "0.3"
ignore = "0.4"                      # .gitignore-aware directory walking

# --- HTTP / Downloads ---
# reqwest already declared above

# --- TUI / Terminal ---
crossterm = "0.28"
unicode-width = "0.2"
notify = "6"
log = "0.4"

# --- Scripting ---
rhai = { version = "1", features = ["sync", "serde"] }

# --- Benchmarking / Testing ---
tokio-test = "0.4"
criterion = "0.5"

[profile.dev]
debug = 1  # line tables only, not full DWARF

[profile.test]
debug = 1  # line tables only — full DWARF is 4+ GB

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
